Fix(certificate): alignment

--- a/client/src/styles/6-pages/_verify-certificate-page.scss
+++ b/client/src/styles/6-pages/_verify-certificate-page.scss
@@ -282,6 +282,10 @@
   bottom: 1.8rem;
   font-size: 0.7rem;
   right: 3.9rem;
+  @media only screen and (min-width: 960px) {
+    bottom: 2.8rem;
+    right: 5.8rem;
+  }
 }
 
 .verification_id_overlay {
