--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -7697,6 +7697,12 @@ td {
   font-size: 0.7rem;
   right: 3.9rem;
 }
+@media only screen and (min-width: 960px) {
+  .trainer-title-overlay {
+    bottom: 2.8rem;
+    right: 5.8rem;
+  }
+}
 
 .verification_id_overlay {
   text-align: center;
